Project Stage two work

--- a/src/index.html
+++ b/src/index.html
@@ -2,40 +2,57 @@
 <head>
     <meta charset="utf-8">
     <meta name="author" content="Caleb Herbel">
-    <meta name="assignment" content="Stage 0">
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="assignment" content="Stage 1">
+    <link rel="stylesheet" href="index.css">
     <title>FGAC</title>
 </head>
 <body>
-    <h1>Foundation for the Global Advancement of Children</h1>
-    <section>
-        <p>
-            I have a friend that's trying to get me to built for his startup non-profit organization.
-            He had a CS major from whitman to design it for him, but that person ended up graduating and 
-            she didn't do very much work on the project. I also think that what he is doing is cool, and 
-            I would like to help him out. 
-
-            For this project, I would like to build a shell for his website that would include different kinds of functionality 
-            that could be useful to the organization. For purposes of this class, I think the design will be mostly experimental; 
-            I can add features to it that might or might not be useful for the end product but it will ultimately 
-            be something that I can hopefully use to for this project that I am embarking on.
-        </p>
-    </section>
-    <section>
-        <p>
-            App Ideas
+    <nav>
         <ul>
-            <li>A place for <a href="https://www.quackit.com/html/codes/comment_box_code.cfm">comment submissions:</a>
-                I think this would be useful to have on the website so that anyone who might questions about the organization 
-                and it's policies could get in contact with him.
-            </li>
-            <li><a href="https://www.jimdo.com/blog/donate-button-to-your-website/">A portal for donations:</a> 
-                This will be the main function of the website, but I don't know if I will do this for this project. 
-                I don't know how involved or safe it is, but it's something that I want to look into.</li>
-            <li>A <a href="https://codepen.io/Viruz/pen/QadJxO">discussion board</a> for posting stories/testimonials: 
-                this is also an idea that may not be in the final website but I am interesting in learning how to make it happen.</li>
+            <li><a class="logo"></a></li>
+            <li><a href="index.html" >Home</a></li>
+            <li><a href="html/pages/contact-us/contact-us.html" >Contact Us</a></li>
+            <li><a href="html/pages/donate/donate.html">Donate</a></li>
+            <li><a href="html/pages/our-projects/our-projects.html">Our Projects</a></li>
+            <li><a href="html/pages/about-us/about-us.html">About Us</a></li>
         </ul>
-        </p>
-    </section>
+    </nav>
+    <main >
+        <!--Temp stock Background image until the organization can find one-->
+        <section style="background-image: url('img/mark-chaves-9322BcAazXM-unsplash.jpg'); height: 600px; background-size: cover; text-align: center;">
+            <h1 style="color: white">Foundation for the Global Advancement of Children</h1>
+            <section>
+                <h2 style="color: white;">Our Mission</h2>
+                <p style="color: white";>Bringing children out of poverty by supporting education and creating safe, loving enviroments.</p>
+            </section>
+        </section>
+    </main>
+    <footer>
+        <ul>
+            <ul>
+                <h2 href="#">Contact us</h2>
+                <a href="mailto:example@example.com">Email: example@example.com</a>
+                <a href="tel:1-123-456-7890">Phone: (123) 456-7890</a>
+            </ul>
+            <ul>
+                <h2 href="#">Give</h2>
+                <a href="html/pages/donate/donate.html">Donate</a>
+                <a href="html/pages/our-projects/our-projects.html">Our Projects</a>
+                <a href="html/pages/donate/donate.html#see-impact">See The Impact</a>
+            </ul>
+            <ul>
+                <h2 href="#">Learn More</h2>
+                <a href="html/pages/our-projects/our-projects.html#mission">Our Mission</a>
+                <a href="html/pages/our-projects/our-projects.html#leadership">LeaderShip</a>
+                <a href="html/pages/our-projects/our-projects.html#finance">Financials</a>
+            </ul>
+            <ul>
+                <h2>Follow Us</h2>
+                <a>Instagram</a>
+                <a>Facebook</a>
+                <a>Twitter</a>
+            </ul>
+        </ul>
+    </footer>
 </body>
 </html>
