--- a/src/html/pages/donate/donate.html
+++ b/src/html/pages/donate/donate.html
@@ -4,24 +4,41 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="donate.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <title>FGAC</title>
     </head>
     <body>
-        <nav>
-            <ul>
-                <li><a class="logo"></a></li>
-                <li><a href="../contact-us/contact-us.html" >Contact Us</a></li>
-                <li><a href="donate.html">Donate</a></li>
-                <li><a href="../our-projects/our-projects.html">Our Projects</a></li>
-                <li><a href="../about-us/about-us.html">About Us</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="../../../index.html">FGAC</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../contact-us/contact-us.html" >Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">Donate<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../our-projects/our-projects.html">Our Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../about-us/about-us.html">About Us</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
         <main>
             <h1>Donate</h1>
             <section>
                 <p>Eventually this will hopefully have a portal to make a credit card donation.
                     For now i'll just add a picture</p>
-                <img src="/img/united-nations-covid-19-response-QVNyCllG2GQ-unsplash.jpg" height="400px">
+                <img src="https://i.ibb.co/v3xDbvW/united-nations-covid-19-response-QVNy-Cll-G2-GQ-unsplash.jpg" height="400px">
             </section>
             <section>
                 <h2 class="see-impact">See the Impact</h2>
@@ -37,32 +54,47 @@
                 </table>
             </section>
         </main>
-        <footer>
-            <ul>
-                <ul>
-                    <h2 href="#">Contact us</h2>
-                    <a href="mailto:example@example.com">Email: example@example.com</a>
-                    <a href="tel:1-123-456-7890">Phone: (123) 456-7890</a>
-                </ul>
-                <ul>
-                    <h2 href="#">Give</h2>
-                    <a href="donate.html">Donate</a>
-                    <a href="../our-projects/our-projects.html">Our Projects</a>
-                    <a href="#see-impact">See The Impact</a>
-                </ul>
-                <ul>
-                    <h2 href="#">Learn More</h2>
-                    <a href="../about-us/about-us.html#mission">Our Mission</a>
-                    <a href="../about-us/about-us.html#leadership">LeaderShip</a>
-                    <a href="../about-us/about-us.html#finance">Financials</a>
-                </ul>
-                <ul>
-                    <h2>Follow Us</h2>
-                    <a>Instagram</a>
-                    <a>Facebook</a>
-                    <a>Twitter</a>
-                </ul>
-            </ul>
+        <footer  style="background-color: #2c292f">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 text-center text-md-left">
+                        <div class="col-md-4 py-4 text-white">
+                            <div>
+                                <h2 href="#">Give</h2>
+                                <a href="donate.html">Donate |</a>
+                                <a href="../our-projects/our-projects.html">Our Projects |</a>
+                                <a href="#see-impact">See The Impact</a>
+                            </div>
+                            <div>
+                                <h2 href="#">Learn More</h2>
+                                <a href="../about-us/about-us.html#mission">Our Mission |</a>
+                                <a href="../about-us/about-us.html#leadership">LeaderShip |</a>
+                                <a href="../about-us/about-us.html#finance">Financials</a>
+                            </div>
+                            <div>
+                                <h2>Follow Us</h2>
+                                <a href="#">Instagram |</a>
+                                <a href="#">Facebook |</a>
+                                <a href="#">Twitter</a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 text-white text-center text-md-left my-1">
+                            <a class="text-light py-4 mb-4">&copy;FGAC is a Non-Profit Organization</a>
+                        </div>
+                        <div class="col-md-4 text-white text-center text-md-left my-3">
+                            <div>
+                                <a>Contact Us</a>
+                            </div>
+                            <div>
+                                <a class="fa-phone">+1 (123) 456-7890</a>
+                            </div>
+                            <div>
+                                <a href="mailto:example@example.com">example@example.com</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
