--- a/src/html/pages/donate/donate.html
+++ b/src/html/pages/donate/donate.html
@@ -3,11 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="donate.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="donate.css">
         <title>FGAC</title>
     </head>
     <body>
@@ -54,45 +53,34 @@
                 </table>
             </section>
         </main>
-        <footer  style="background-color: #2c292f">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3 text-center text-md-left">
-                        <div class="col-md-4 py-4 text-white">
-                            <div>
-                                <h2 href="#">Give</h2>
-                                <a href="donate.html">Donate |</a>
-                                <a href="../our-projects/our-projects.html">Our Projects |</a>
-                                <a href="#see-impact">See The Impact</a>
-                            </div>
-                            <div>
-                                <h2 href="#">Learn More</h2>
-                                <a href="../about-us/about-us.html#mission">Our Mission |</a>
-                                <a href="../about-us/about-us.html#leadership">LeaderShip |</a>
-                                <a href="../about-us/about-us.html#finance">Financials</a>
-                            </div>
-                            <div>
-                                <h2>Follow Us</h2>
-                                <a href="#">Instagram |</a>
-                                <a href="#">Facebook |</a>
-                                <a href="#">Twitter</a>
-                            </div>
-                        </div>
-                        <div class="col-md-4 text-white text-center text-md-left my-1">
-                            <a class="text-light py-4 mb-4">&copy;FGAC is a Non-Profit Organization</a>
-                        </div>
-                        <div class="col-md-4 text-white text-center text-md-left my-3">
-                            <div>
-                                <a>Contact Us</a>
-                            </div>
-                            <div>
-                                <a class="fa-phone">+1 (123) 456-7890</a>
-                            </div>
-                            <div>
-                                <a href="mailto:example@example.com">example@example.com</a>
-                            </div>
-                        </div>
-                    </div>
+        <footer  class="footer" style="background-color: #2c292f">
+            <div class="oval"></div>
+            <div class="flex-container">
+                <div class="flex-item text-center">
+                    <h2 href="#">Give</h2>
+                    <a href="donate.html">Donate<a> | </a></a>
+                    <a href="../our-projects/our-projects.html">Our Projects<a> | </a></a>
+                    <a href="#see-impact">See The Impact</a>
+                </div>
+                <div class="flex-item text-center">
+                    <h2 href="#">Learn More</h2>
+                    <a href="../about-us/about-us.html#mission">Our Mission<a> | </a></a>
+                    <a href="../about-us/about-us.html#leadership">LeaderShip<a> | </a></a>
+                    <a href="../about-us/about-us.html#finance">Financials</a>
+                </div>
+                <div class="flex-item text-center">
+                    <h2>Follow Us</h2>
+                    <a href="#">Instagram<a> | </a></a>
+                    <a href="#">Facebook<a> | </a></a>
+                    <a href="#">Twitter</a>
+                </div>
+                <div class="flex-item text-center">
+                    <h2>Contact Us</h2>
+                    <a class="fa-phone">+1 (123) 456-7890<a> |</a></a>
+                    <a href="mailto:example@example.com">example@example.com</a>
+                </div>
+                <div class="flex-item text-center non-profit">
+                    <a class="text-light py-4 mb-4">&copy;FGAC is a Non-Profit Organization</a>
                 </div>
             </div>
         </footer>
