--- a/src/html/pages/about-us/about-us.html
+++ b/src/html/pages/about-us/about-us.html
@@ -32,7 +32,7 @@
                 </ul>
             </div>
         </nav>
-        <main>
+        <main class="text-center">
             <h1>About Us</h1>
             <section>
                 <h2 class="mission">Our Mission</h2>
@@ -40,8 +40,11 @@
                     non-profits by supporting sustainable projects and quality educational facilities that
                     will ultimately lead to children enjoying independent lives.</p>
             </section>
-            <section>
-                <h2><a href="../donate/donate.html">Donate Now</a></h2>
+            <section class="btn">
+                <!--Button help from: https://dev.to/webdeasy/top-20-css-buttons-animations-f41-->
+                <button class="donate-btn" type="button">
+                    Donate Now
+                </button>
             </section>
             <section>
                 <h2>History</h2>
@@ -49,7 +52,16 @@
             </section>
             <section>
                 <h2 class="leadership">Leadership</h2>
-                <p>A description of the organizations leaders.</p>
+                <div  class="flex-container">
+                    <div class="flex-item">
+                        <img class="emp-photo" src="https://i.ibb.co/yhT00M4/portrait-657116-1920.jpg" alt="A photo of _____" border="0">
+                        <p>A Picture of ____ the _____ of our organization</p>
+                    </div>
+                    <div class="flex-item">
+                        <img class="emp-photo" src="https://i.ibb.co/CHm3tDN/human-1411499-1920.jpg" alt="A photo of ____" border="0">
+                        <p>A Picture of ____ the _____ of our organization</p>
+                    </div>
+                </div>
             </section>
             <section>
                 <h2 class="finance">Financials</h2>
