--- a/src/html/pages/contact-us/contact-us.html
+++ b/src/html/pages/contact-us/contact-us.html
@@ -32,7 +32,7 @@
                 </ul>
             </div>
         </nav>
-        <main>
+        <main class="text-center">
             <h1>Contact Us</h1>
             <img src="https://i.ibb.co/kMKvjnk/pawel-czerwinski-0x-CCPIbl3-M-unsplash.jpg" height="200px">
             <section>
