--- a/src/html/pages/donate/donate.html
+++ b/src/html/pages/donate/donate.html
@@ -32,7 +32,7 @@
                 </ul>
             </div>
         </nav>
-        <main>
+        <main class="text-center">
             <h1>Donate</h1>
             <section>
                 <p>Eventually this will hopefully have a portal to make a credit card donation.
