--- a/src/html/pages/our-projects/our-projects.html
+++ b/src/html/pages/our-projects/our-projects.html
@@ -32,7 +32,7 @@
                 </ul>
             </div>
         </nav>
-        <main>
+        <main class="text-center">
             <h1>Our Projects</h1>
             <section>
                 <h2>How We're Making a Difference</h2>
