Changes to Webpage Finalish

--- a/src/html/pages/about-us/about-us.html
+++ b/src/html/pages/about-us/about-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -35,36 +35,34 @@
         <main class="text-center">
             <h1>About Us</h1>
             <section>
-                <h2 class="mission">Our Mission</h2>
+                <h2 id="mission">Our Mission</h2>
                 <p>Through business development we will assist organizations to become independent from
                     non-profits by supporting sustainable projects and quality educational facilities that
                     will ultimately lead to children enjoying independent lives.</p>
             </section>
             <section class="btn">
                 <!--Button help from: https://dev.to/webdeasy/top-20-css-buttons-animations-f41-->
-                <button class="donate-btn" type="button">
-                    Donate Now
-                </button>
+                <button class="donate-btn" type="button">Donate Now</button>
             </section>
             <section>
                 <h2>History</h2>
                 <p>History of the Organization</p>
             </section>
             <section>
-                <h2 class="leadership">Leadership</h2>
+                <h2 id="leadership">Leadership</h2>
                 <div  class="flex-container">
                     <div class="flex-item">
-                        <img class="emp-photo" src="https://i.ibb.co/yhT00M4/portrait-657116-1920.jpg" alt="A photo of _____" border="0">
+                        <img class="first" src="https://i.ibb.co/yhT00M4/portrait-657116-1920.jpg" alt="A photo of _____" border="0">
                         <p>A Picture of ____ the _____ of our organization</p>
                     </div>
                     <div class="flex-item">
-                        <img class="emp-photo" src="https://i.ibb.co/CHm3tDN/human-1411499-1920.jpg" alt="A photo of ____" border="0">
+                        <img class="second" src="https://i.ibb.co/CHm3tDN/human-1411499-1920.jpg" alt="A photo of ____" border="0">
                         <p>A Picture of ____ the _____ of our organization</p>
                     </div>
                 </div>
             </section>
             <section>
-                <h2 class="finance">Financials</h2>
+                <h2 id="finance">Financials</h2>
                 <p>This Section will include links to Financial Statements and an IRS 990 Form.</p>
             </section>
 
