--- a/src/html/pages/donate/donate.html
+++ b/src/html/pages/donate/donate.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -35,54 +35,60 @@
         <main class="text-center">
             <h1>Donate</h1>
             <section>
-                <p>Eventually this will hopefully have a portal to make a credit card donation.
+                <p class="portal">Eventually this will hopefully have a portal to make a credit card donation.
                     For now i'll just add a picture</p>
-                <img src="https://i.ibb.co/v3xDbvW/united-nations-covid-19-response-QVNy-Cll-G2-GQ-unsplash.jpg" height="400px">
+                <img src="https://i.ibb.co/v3xDbvW/united-nations-covid-19-response-QVNy-Cll-G2-GQ-unsplash.jpg" alt="This photo says every little thing helps." height="400px">
             </section>
             <section>
-                <h2 class="see-impact">See the Impact</h2>
-                <table>
-                    <tr>
-                        <th>Stories From Kids</th>
-                        <th>Social Media Accounts</th>
-                    </tr>
-                    <tr>
-                        <td>This is the story</td>
-                        <td>These are the accounts</td>
-                    </tr>
-                </table>
+                <h2 id="see-impact">See the Impact</h2>
+                <div>
+                    <h3 class="test-header">Stories from the Kids</h3>
+                    <p>Here are stories from the kids.</p>
+                </div>
+                <div>
+                    <h3 class="test-header">Testimonials</h3>
+                    <p>This is where the testamonials will go.</p>
+                </div>
+                <div>
+                <h3>Social Media</h3>
+                    <table id="social">
+                        <td><a href="#"><img src="https://i.ibb.co/80hwJkK/iconfinder-Rounded-Facebook-svg-5282541.png" alt="Facebook Icon" border="0"></a></td>
+                        <td><a href="#"><img src="https://i.ibb.co/Npkt1kR/iconfinder-Rounded-Twitter5-svg-5282551.png" alt="Twitter Icon" border="0"></a></td>
+                        <td><a href="#"><img src="https://i.ibb.co/BCkpFF0/iconfinder-Rounded-Instagram-svg-5282544.png" alt="Twitter Icon" border="0"></a></td>
+                    </table>
+                </div>
             </section>
         </main>
-        <footer  class="footer" style="background-color: #2c292f">
-            <div class="oval"></div>
-            <div class="flex-container">
-                <div class="flex-item text-center">
-                    <h2 href="#">Give</h2>
-                    <a href="donate.html">Donate<a> | </a></a>
-                    <a href="../our-projects/our-projects.html">Our Projects<a> | </a></a>
-                    <a href="#see-impact">See The Impact</a>
-                </div>
-                <div class="flex-item text-center">
-                    <h2 href="#">Learn More</h2>
-                    <a href="../about-us/about-us.html#mission">Our Mission<a> | </a></a>
-                    <a href="../about-us/about-us.html#leadership">LeaderShip<a> | </a></a>
-                    <a href="../about-us/about-us.html#finance">Financials</a>
-                </div>
-                <div class="flex-item text-center">
-                    <h2>Follow Us</h2>
-                    <a href="#">Instagram<a> | </a></a>
-                    <a href="#">Facebook<a> | </a></a>
-                    <a href="#">Twitter</a>
-                </div>
-                <div class="flex-item text-center">
-                    <h2>Contact Us</h2>
-                    <a class="fa-phone">+1 (123) 456-7890<a> |</a></a>
-                    <a href="mailto:example@example.com">example@example.com</a>
-                </div>
-                <div class="flex-item text-center non-profit">
-                    <a class="text-light py-4 mb-4">&copy;FGAC is a Non-Profit Organization</a>
-                </div>
-            </div>
-        </footer>
     </body>
+    <footer  class="footer" style="background-color: #2c292f">
+        <div class="oval"></div>
+        <div class="flex-container">
+            <div class="flex-item text-center">
+                <h2 href="#">Give</h2>
+                <a href="donate.html">Donate<a> | </a></a>
+                <a href="../our-projects/our-projects.html">Our Projects<a> | </a></a>
+                <a href="#see-impact">See The Impact</a>
+            </div>
+            <div class="flex-item text-center">
+                <h2 href="#">Learn More</h2>
+                <a href="../about-us/about-us.html#mission">Our Mission<a> | </a></a>
+                <a href="../about-us/about-us.html#leadership">LeaderShip<a> | </a></a>
+                <a href="../about-us/about-us.html#finance">Financials</a>
+            </div>
+            <div class="flex-item text-center">
+                <h2>Follow Us</h2>
+                <a href="#">Instagram<a> | </a></a>
+                <a href="#">Facebook<a> | </a></a>
+                <a href="#">Twitter</a>
+            </div>
+            <div class="flex-item text-center">
+                <h2>Contact Us</h2>
+                <a class="fa-phone">+1 (123) 456-7890<a> |</a></a>
+                <a href="mailto:example@example.com">example@example.com</a>
+            </div>
+            <div class="flex-item text-center non-profit">
+                <a class="text-light py-4 mb-4">&copy;FGAC is a Non-Profit Organization</a>
+            </div>
+        </div>
+    </footer>
 </html>
