--- a/src/html/pages/our-projects/our-projects.html
+++ b/src/html/pages/our-projects/our-projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -34,46 +34,55 @@
         </nav>
         <main class="text-center">
             <h1>Our Projects</h1>
-            <section>
-                <h2>How We're Making a Difference</h2>
-                <img src="https://i.ibb.co/vQYCSGg/scott-graham-5f-Nm-Wej4t-AA-unsplash.jpg" height="300px">
-                <p>Information about specific Projects</p>
-            </section>
-            <section>
-                <h2><a href="../donate/donate.html#see-impact">See the Impact</a></h2>
-            </section>
-            <a href="../donate/donate.html">Donate Now</a>
-        </main>
-        <footer  class="footer" style="background-color: #2c292f">
-            <div class="oval"></div>
-            <div class="flex-container">
-                <div class="flex-item text-center">
-                    <h2 href="#">Give</h2>
-                    <a href="../donate/donate.html">Donate<a> | </a></a>
-                    <a href="our-projects.html">Our Projects<a> | </a></a>
-                    <a href="../donate/donate.html#see-impact">See The Impact</a>
+            <img src="https://i.ibb.co/vQYCSGg/scott-graham-5f-Nm-Wej4t-AA-unsplash.jpg" alt="People working at a desk." height="300px">
+            <div class="parallax">
+                <div>
+                    <h2>How We're Making a Difference</h2>
+                    <p>Information about specific Projects.  This is our project. Checkout it out. I am waiting
+                        for information to fill in about  projects.  Coming Soon.
+                    </p>
                 </div>
-                <div class="flex-item text-center">
-                    <h2 href="#">Learn More</h2>
-                    <a href="../about-us/about-us.html#mission">Our Mission<a> | </a></a>
-                    <a href="../about-us/about-us.html#leadership">LeaderShip<a> | </a></a>
-                    <a href="../about-us/about-us.html#finance">Financials</a>
+                <div class="impact-div">
+                    <p>Eventually this won't be the same button as donate:</p>
+                    <!--Button help from: https://dev.to/webdeasy/top-20-css-buttons-animations-f41-->
+                    <button class="donate-btn" type="button">See the Impact</button>
                 </div>
-                <div class="flex-item text-center">
-                    <h2>Follow Us</h2>
-                    <a href="#">Instagram<a> | </a></a>
-                    <a href="#">Facebook<a> | </a></a>
-                    <a href="#">Twitter</a>
-                </div>
-                <div class="flex-item text-center">
-                    <h2>Contact Us</h2>
-                    <a class="fa-phone">+1 (123) 456-7890<a> |</a></a>
-                    <a href="mailto:example@example.com">example@example.com</a>
-                </div>
-                <div class="flex-item text-center non-profit">
-                    <a class="text-light py-4 mb-4">&copy;FGAC is a Non-Profit Organization</a>
+                <div class="donate-div">
+                    <!--Button help from: https://dev.to/webdeasy/top-20-css-buttons-animations-f41-->
+                    <button class="donate-btn" type="button">Donate Now</button>
                 </div>
             </div>
-        </footer>
+        </main>
     </body>
+    <footer  class="footer" style="background-color: #2c292f">
+        <div class="oval"></div>
+        <div class="flex-container">
+            <div class="flex-item text-center">
+                <h2 href="#">Give</h2>
+                <a href="../donate/donate.html">Donate<a> | </a></a>
+                <a href="our-projects.html">Our Projects<a> | </a></a>
+                <a href="../donate/donate.html#see-impact">See The Impact</a>
+            </div>
+            <div class="flex-item text-center">
+                <h2 href="#">Learn More</h2>
+                <a href="../about-us/about-us.html#mission">Our Mission<a> | </a></a>
+                <a href="../about-us/about-us.html#leadership">LeaderShip<a> | </a></a>
+                <a href="../about-us/about-us.html#finance">Financials</a>
+            </div>
+            <div class="flex-item text-center">
+                <h2>Follow Us</h2>
+                <a href="#">Instagram<a> | </a></a>
+                <a href="#">Facebook<a> | </a></a>
+                <a href="#">Twitter</a>
+            </div>
+            <div class="flex-item text-center">
+                <h2>Contact Us</h2>
+                <a class="fa-phone">+1 (123) 456-7890<a> |</a></a>
+                <a href="mailto:example@example.com">example@example.com</a>
+            </div>
+            <div class="flex-item text-center non-profit">
+                <a class="text-light py-4 mb-4">&copy;FGAC is a Non-Profit Organization</a>
+            </div>
+        </div>
+    </footer>
 </html>
