--- a/src/html/pages/contact-us/contact-us.html
+++ b/src/html/pages/contact-us/contact-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -34,7 +34,7 @@
         </nav>
         <main class="text-center">
             <h1>Contact Us</h1>
-            <img src="https://i.ibb.co/kMKvjnk/pawel-czerwinski-0x-CCPIbl3-M-unsplash.jpg" height="200px">
+            <img src="https://i.ibb.co/kMKvjnk/pawel-czerwinski-0x-CCPIbl3-M-unsplash.jpg" alt="A photo of a telephone" height="200px">
             <section>
                 <h2>How to contact us</h2>
                 <p>
@@ -43,13 +43,18 @@
                     are wondering where your where your donations are going, or anything else, you can also
                     contact us us via email and we'll get back to you as soon as possible.
                 </p>
-                <a>Phone:<a href="tel:1-123-456-7890">1 (123) 456 - 7890</a></a>
-                <a>Email:<a href="mailto:example@example.com">example@example.com</a></a>
-                <a>Address: 123 Fyneman Way, College Place, Wa, 99324</a>
-                <a>Find us on Facebook</a>
-                <a>Find us on Instagram</a>
-                <a>Find us on Twitter</a>
-                <a href="../donate/donate.html">Donate Now</a>
+                <div class="contact-info">
+                    <div>Phone:<a href="tel:1-123-456-7890"> 1 (123) 456-7890</a></div>
+                    <div>Email:<a href="mailto:example@example.com"> example@example.com</a></div>
+                    <div>Address: 123 Fyneman Way, College Place, Wa, 99324</div>
+                    <div>Find us on <a href="#">Instagram</a></div>
+                    <div><a>Find us on <a href="#">Facebook</a></a></div>
+                    <div>Find us on <a href="#">Twitter</a></div>
+                </div>
+                <div class="donate-div">
+                    <!--Button help from: https://dev.to/webdeasy/top-20-css-buttons-animations-f41-->
+                    <button class="donate-btn" type="button">Donate Now</button>
+                </div>
             </section>
         </main>
     </body>
