--- a/src/index.html
+++ b/src/index.html
@@ -1,46 +1,49 @@
 <!--Help from Bootstrap Docs: https://getbootstrap.com/docs/4.0/getting-started/introduction/-->
 
 <!DOCTYPE html>
-<head>
-    <meta charset="utf-8">
-    <meta name="author" content="Caleb Herbel">
-    <meta name="assignment" content="Stage 2">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="index.css">
-    <title>FGAC</title>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="">FGAC<span class="sr-only">(current)</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="html/pages/contact-us/contact-us.html" >Contact Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="html/pages/donate/donate.html">Donate</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="html/pages/our-projects/our-projects.html">Our Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="html/pages/about-us/about-us.html">About Us</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <main>
-        <section id="homepage" class="w-100 p-3">
-            <h1 id="title">Foundation for the Global Advancement of Children</h1>
-            <p id="mission">Bringing children out of poverty by supporting education and creating safe, loving enviroments.</p>
-        </section>
-    </main>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="author" content="Caleb Herbel">
+        <meta name="assignment" content="Stage 2">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="index.css">
+        <title>FGAC</title>
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="">FGAC<span class="sr-only">(current)</span></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="html/pages/contact-us/contact-us.html" >Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="html/pages/donate/donate.html">Donate</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="html/pages/our-projects/our-projects.html">Our Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="html/pages/about-us/about-us.html">About Us</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <main>
+            <section id="homepage" class="w-100 p-3">
+                <h1 id="title">Foundation for the Global Advancement of Children</h1>
+                <p id="mission">Bringing children out of poverty by supporting
+                    education and creating safe, loving enviroments.</p>
+            </section>
+        </main>
+    </body>
     <footer  class="footer" style="background-color: #2c292f">
         <div class="oval"></div>
         <div class="flex-container">
@@ -72,5 +75,4 @@
             </div>
         </div>
     </footer>
-</body>
 </html>
