--- a/src/html/pages/donate/donate.html
+++ b/src/html/pages/donate/donate.html
@@ -41,12 +41,14 @@
             </section>
             <section>
                 <h2 id="see-impact">See the Impact</h2>
-                <div>
-                    <h3 class="test-header">Stories from the Kids</h3>
-                    <p>Here are stories from the kids.</p>
+                <div id="kids-stories">
+                    <h3>Stories From The Kids</h3>
+                    <img class="kids-img">
+                    <h4 class="kids-head"></h4>
+                    <p class="kids-p"></p>
                 </div>
                 <div>
-                    <h3 class="test-header">Testimonials</h3>
+                    <h3>Testimonials</h3>
                     <p>This is where the testamonials will go.</p>
                 </div>
                 <div>
@@ -59,6 +61,7 @@
                 </div>
             </section>
         </main>
+        <script src="donate.js"></script>
     </body>
     <footer  class="footer" style="background-color: #2c292f">
         <div class="oval"></div>
