have multiple popups

--- a/src/html/pages/donate/donate.html
+++ b/src/html/pages/donate/donate.html
@@ -43,9 +43,38 @@
                 <h2 id="see-impact">See the Impact</h2>
                 <div id="kids-stories">
                     <h3>Stories From The Kids</h3>
-                    <img class="kids-img">
+                    <div id="image-flex">
+                        <button class="back arrow"></button>
+                        <img class="kids-img">
+                        <button class="next arrow"></button>
+                    </div>
                     <h4 class="kids-head"></h4>
                     <p class="kids-p"></p>
+                    <button id="more">Learn More</button>
+                </div>
+                <div class="story border" id="story1">
+                    <h2>Child 1</h2>
+                    <p>
+                        This is a popup story that will detail the story of the first child
+                        displayed in the slideshow widget.
+                    </p>
+                    <button class="closeButton">Close</button>
+                </div>
+                <div class="story border" id="story2">
+                    <h2>Child 2</h2>
+                    <p>
+                        This is a popup story that will detail the story of the first child
+                        displayed in the slideshow widget.
+                    </p>
+                    <button class="closeButton">Close</button>
+                </div>
+                <div class="story border" id="story3">
+                    <h2>Child 3</h2>
+                    <p>
+                        This is a popup story that will detail the story of the first child
+                        displayed in the slideshow widget.
+                    </p>
+                    <button class="closeButton">Close</button>
                 </div>
                 <div>
                     <h3>Testimonials</h3>
