--- a/src/html/pages/donate/donate.html
+++ b/src/html/pages/donate/donate.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="../../../css/custom-defaults.css">
+        <link rel="stylesheet" href="../../../css/footer.css">
         <link rel="stylesheet" href="donate.css">
         <title>FGAC</title>
     </head>
@@ -34,7 +36,7 @@
         </nav>
         <main class="text-center">
             <h1>Donate</h1>
-            <section>
+            <section id="donate">
                 <p class="portal">Eventually this will hopefully have a portal to make a credit card donation.
                     For now i'll just add a picture</p>
                 <img src="https://i.ibb.co/v3xDbvW/united-nations-covid-19-response-QVNy-Cll-G2-GQ-unsplash.jpg" alt="This photo says every little thing helps." height="400px">
@@ -45,7 +47,7 @@
                     <h3>Stories From The Kids</h3>
                     <div id="image-flex">
                         <button class="back arrow"></button>
-                        <img class="kids-img">
+                        <img class="kids-img card">
                         <button class="next arrow"></button>
                     </div>
                     <h4 class="kids-head"></h4>
