Buttons are functional

--- a/src/html/pages/about-us/about-us.html
+++ b/src/html/pages/about-us/about-us.html
@@ -45,7 +45,7 @@
             </section>
             <section class="btn">
                 <!--Button help from: https://dev.to/webdeasy/top-20-css-buttons-animations-f41-->
-                <button class="donate-btn" type="button">Donate Now</button>
+                <button class="donate-btn" type="button" onclick="window.location.href='../donate/donate.html';">Donate Now</button>
             </section>
             <section>
                 <h2>History</h2>
