--- a/src/html/pages/contact-us/contact-us.html
+++ b/src/html/pages/contact-us/contact-us.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="donate-div">
                     <!--Button help from: https://dev.to/webdeasy/top-20-css-buttons-animations-f41-->
-                    <button class="donate-btn" type="button">Donate Now</button>
+                    <button class="donate-btn" type="button" onclick="window.location.href='../donate/donate.html';">Donate Now</button>
                 </div>
             </section>
         </main>
