--- a/src/html/pages/our-projects/our-projects.html
+++ b/src/html/pages/our-projects/our-projects.html
@@ -48,11 +48,11 @@
                 <div class="impact-div">
                     <p>Eventually this won't be the same button as donate:</p>
                     <!--Button help from: https://dev.to/webdeasy/top-20-css-buttons-animations-f41-->
-                    <button class="donate-btn" type="button">See the Impact</button>
+                    <button class="donate-btn" type="button" onclick="window.location.href='../donate/donate.html#see-impact';">See the Impact</button>
                 </div>
                 <div class="donate-div">
                     <!--Button help from: https://dev.to/webdeasy/top-20-css-buttons-animations-f41-->
-                    <button class="donate-btn" type="button">Donate Now</button>
+                    <button class="donate-btn" type="button" onclick="window.location.href='../donate/donate.html';">Donate Now</button>
                 </div>
             </div>
         </main>
