Added fetch with promises

--- a/src/html/pages/donate/donate.html
+++ b/src/html/pages/donate/donate.html
@@ -92,6 +92,8 @@
                 </div>
             </section>
         </main>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.4/fetch.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.js"></script>
         <script src="donate.js"></script>
     </body>
     <footer  class="footer" style="background-color: #2c292f">
