--- a/src/html/pages/donate/donate.html
+++ b/src/html/pages/donate/donate.html
@@ -43,6 +43,7 @@
             </section>
             <section>
                 <h2 id="see-impact">See the Impact</h2>
+                <!--Dynamic Section for kids stories-->
                 <div id="kids-stories">
                     <h3>Stories From The Kids</h3>
                     <div id="image-flex">
@@ -83,6 +84,7 @@
                     <p>This is where the testamonials will go.</p>
                 </div>
                 <div>
+                <!--Section for Social Media-->
                 <h3>Social Media</h3>
                     <table id="social">
                         <td><a href="#"><img src="https://i.ibb.co/80hwJkK/iconfinder-Rounded-Facebook-svg-5282541.png" alt="Facebook Icon" border="0"></a></td>
@@ -92,6 +94,7 @@
                 </div>
             </section>
         </main>
+        <!--Load Javascript-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.4/fetch.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.js"></script>
         <script src="donate.js"></script>
