--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
             <section id="homepage" class="w-100 p-3">
                 <h1 id="title">Foundation for the Global Advancement of Children</h1>
                 <p id="mission">Bringing children out of poverty by supporting
-                    education and creating safe, loving enviroments.</p>
+                    education and creating safe, loving environments.</p>
             </section>
         </main>
     </body>
