--- a/src/html/pages/contact-us/contact-us.html
+++ b/src/html/pages/contact-us/contact-us.html
@@ -60,6 +60,7 @@
                 </div>
             </section>
         </main>
+        <script src="contact-us.js"></script>
     </body>
     <footer  class="footer" style="background-color: #2c292f">
         <div class="oval"></div>
