--- a/src/html/pages/donate/donate.html
+++ b/src/html/pages/donate/donate.html
@@ -48,7 +48,7 @@
                     <h3>Stories From The Kids</h3>
                     <div id="image-flex">
                         <button class="back arrow"></button>
-                        <img class="kids-img card">
+                        <img id="kids-img" class="card loading">
                         <button class="next arrow"></button>
                     </div>
                     <h4 class="kids-head"></h4>
