--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
                     education and creating safe, loving environments.</p>
             </section>
         </main>
+        <script src="index.js"></script>
     </body>
     <footer  class="footer" style="background-color: #2c292f">
         <div class="oval"></div>
