--- a/src/html/pages/about-us/about-us.html
+++ b/src/html/pages/about-us/about-us.html
@@ -70,6 +70,7 @@
             </section>
 
         </main>
+        <script src="about-us.js"></script>
     </body>
     <footer  class="footer" style="background-color: #2c292f">
         <div class="oval"></div>
