--- a/src/html/pages/our-projects/our-projects.html
+++ b/src/html/pages/our-projects/our-projects.html
@@ -56,6 +56,7 @@
                 </div>
             </div>
         </main>
+        <script src="our-projects.js"></script>
     </body>
     <footer  class="footer" style="background-color: #2c292f">
         <div class="oval"></div>
