WIP, and changed scripts

--- a/src/html/pages/donate/donate.html
+++ b/src/html/pages/donate/donate.html
@@ -4,8 +4,6 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../../../css/custom-defaults.css">
         <link rel="stylesheet" href="../../../css/footer.css">
         <link rel="stylesheet" href="donate.css">
@@ -48,7 +46,7 @@
                     <h3>Stories From The Kids</h3>
                     <div id="image-flex">
                         <button class="back arrow"></button>
-                        <img id="kids-img" class="card loading">
+                        <img id="kids-img" class="card">
                         <button class="next arrow"></button>
                     </div>
                     <h4 class="kids-head"></h4>
@@ -79,12 +77,17 @@
                     </p>
                     <button class="closeButton">Close</button>
                 </div>
-                <div>
-                    <h3>Testimonials</h3>
-                    <p>This is where the testamonials will go.</p>
+            </section>
+            <section id="adviceSection">
+                <div class="advice-card">
+                    <div id="need-Advice">Need some Advice?</div>
+                    <div id="random-advice">This is where the testamonials will go.</div>
+                    <div id="advice-source">Advice Generated from AdviceSlip.com</div>
                 </div>
+            </section>
+            <!--Section for Social Media-->
+            <section>
                 <div>
-                <!--Section for Social Media-->
                 <h3>Social Media</h3>
                     <table id="social">
                         <td><a href="#"><img src="https://i.ibb.co/80hwJkK/iconfinder-Rounded-Facebook-svg-5282541.png" alt="Facebook Icon" border="0"></a></td>
@@ -95,6 +98,8 @@
             </section>
         </main>
         <!--Load Javascript-->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.4/fetch.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.js"></script>
         <script src="donate.js"></script>
