--- a/src/html/pages/contact-us/contact-us.html
+++ b/src/html/pages/contact-us/contact-us.html
@@ -48,13 +48,33 @@
                     <div>Phone:<a href="tel:1-123-456-7890"> 1 (123) 456-7890</a></div>
                     <div>Email:<a href="mailto:example@example.com"> example@example.com</a></div>
                     <div>Address: 123 Fyneman Way, College Place, Wa, 99324</div>
-                    <div>Find us on <a href="#">Instagram</a></div>
-                    <div><a>Find us on <a href="#">Facebook</a></a></div>
-                    <div>Find us on <a href="#">Twitter</a></div>
                 </div>
                 <div class="donate-div">
                     <!--Button help from: https://dev.to/webdeasy/top-20-css-buttons-animations-f41-->
                     <button class="donate-btn" type="button" onclick="window.location.href='../donate/donate.html';">Donate Now</button>
+                </div>
+            </section>
+            <section id="content-section">
+                <div class="flex-box">
+                    <!--Advice Section-->
+                    <div class="flex-item advice-card">
+                        <div class="align-horizontally">
+                            <div id="need-Advice">Need some Advice?</div>
+                            <div id="random-advice"></div>
+                            <div id="advice-source">Advice Generated from AdviceSlip.com</div>
+                        </div>
+                    </div>
+                    <!--Section 2-->
+                    <div class="flex-item photo-card"></div>
+                    <!--Section 3-->
+                    <div class="flex-item social-media">
+                        <table id="social">
+                            <td><a href="#"><img src="https://i.ibb.co/80hwJkK/iconfinder-Rounded-Facebook-svg-5282541.png" alt="Facebook Icon" border="0"></a></td>
+                            <td><a href="#"><img src="https://i.ibb.co/Npkt1kR/iconfinder-Rounded-Twitter5-svg-5282551.png" alt="Twitter Icon" border="0"></a></td>
+                            <td><a href="#"><img src="https://i.ibb.co/BCkpFF0/iconfinder-Rounded-Instagram-svg-5282544.png" alt="Twitter Icon" border="0"></a></td>
+                        </table>
+                    </div>
+                    </div>
                 </div>
             </section>
         </main>
