--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" href="css/footer.css">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="css/index.css">
         <title>FGAC</title>
     </head>
     <body>
@@ -21,16 +21,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="html/pages/contact-us/contact-us.html" >Contact Us</a>
+                        <a class="nav-link" href="pages/contact-us/contact-us.html" >Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/pages/donate/donate.html">Donate</a>
+                        <a class="nav-link" href="pages/donate/donate.html">Donate</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/pages/our-projects/our-projects.html">Our Projects</a>
+                        <a class="nav-link" href="pages/our-projects/our-projects.html">Our Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/pages/about-us/about-us.html">About Us</a>
+                        <a class="nav-link" href="pages/about-us/about-us.html">About Us</a>
                     </li>
                 </ul>
             </div>
@@ -44,22 +44,22 @@
         </main>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        <script src="index.js"></script>
+        <script src="js/index.js"></script>
     </body>
     <footer  class="footer" style="background-color: #2c292f">
         <div class="oval"></div>
         <div class="flex-container">
             <div class="flex-item text-center">
                 <h2 href="#">Give</h2>
-                <a href="html/pages/donate/donate.html">Donate<a> | </a></a>
-                <a href="html/pages/our-projects/our-projects.html">Our Projects<a> | </a></a>
-                <a href="html/pages/donate/donate.html#see-impact">See The Impact</a>
+                <a href="pages/donate/donate.html">Donate<a> | </a></a>
+                <a href="pages/our-projects/our-projects.html">Our Projects<a> | </a></a>
+                <a href="pages/donate/donate.html#see-impact">See The Impact</a>
             </div>
             <div class="flex-item text-center">
                 <h2 href="#">Learn More</h2>
-                <a href="html/pages/our-projects/our-projects.html#mission">Our Mission<a> | </a></a>
-                <a href="html/pages/our-projects/our-projects.html#leadership">LeaderShip<a> | </a></a>
-                <a href="html/pages/our-projects/our-projects.html#finance">Financials</a>
+                <a href="pages/our-projects/our-projects.html#mission">Our Mission<a> | </a></a>
+                <a href="pages/our-projects/our-projects.html#leadership">LeaderShip<a> | </a></a>
+                <a href="pages/our-projects/our-projects.html#finance">Financials</a>
             </div>
             <div class="flex-item text-center">
                 <h2>Follow Us</h2>
