--- a/src/pages/our-projects/our-projects.html
+++ b/src/pages/our-projects/our-projects.html
@@ -4,15 +4,15 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="../../../css/custom-defaults.css">
-        <link rel="stylesheet" href="../../../css/footer.css">
-        <link rel="stylesheet" href="../../../css/fancy-buttons.css">
+        <link rel="stylesheet" href="../../css/custom-defaults.css">
+        <link rel="stylesheet" href="../../css/footer.css">
+        <link rel="stylesheet" href="../../css/fancy-buttons.css">
         <link rel="stylesheet" href="our-projects.css">
         <title>FGAC</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="../../../index.html">FGAC</a>
+            <a class="navbar-brand" href="../../index.html">FGAC</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
