Added Testing for Donate Folder

--- a/src/pages/donate/donate.html
+++ b/src/pages/donate/donate.html
@@ -42,7 +42,7 @@
             <section>
                 <h2 id="see-impact">See the Impact</h2>
                 <!--Dynamic Section for kids stories-->
-                <div id="kids-stories">
+                <div id="kids-stories" class="border">
                     <h3>Stories From The Kids</h3>
                     <div id="image-flex">
                         <button class="back arrow"></button>
